--- a/services.html
+++ b/services.html
@@ -37,7 +37,7 @@
       <a href="index.html" class="logo d-flex align-items-center me-auto">
         <!-- Uncomment the line below if you also wish to use an image logo -->
         <!-- <img src="assets/img/logo.png" alt=""> -->
-        <h1 class="sitename">RG Technologies</h1><span>.</span>
+        <h1 class="sitename">RG CodeCarfts Pvt.Ltd</h1><span>.</span>
       </a>
 
       <nav id="navmenu" class="navmenu">
@@ -47,7 +47,7 @@
             <ul>
               <li><a href="team.html">Team</a></li>
               <li><a href="testimonials.html">Testimonials</a></li>
-              <li class="dropdown"><a href="#"><span>Deep Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
+              <li class="dropdown" style="display: none;"><a href="#"><span>Deep Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
                 <ul>
                   <li><a href="#">Deep Dropdown 1</a></li>
                   <li><a href="#">Deep Dropdown 2</a></li>
@@ -125,7 +125,7 @@
               <a href="service-details.html" class="stretched-link">
                 <h3>Mobile device management</h3>
               </a>
-              <p>Ut autem aut autem non a. Sint sint sit facilis nam iusto sint. Libero corrupti neque eum hic non ut nesciunt dolorem.</p>
+              <p>we provide Mobile Device Management (MDM) solutions that help businesses efficiently manage, secure, and monitor their mobile devices.</p>
             </div>
           </div><!-- End Service Item -->
 
@@ -140,7 +140,7 @@
               <a href="service-details.html" class="stretched-link">
                 <h3>Managed IT services</h3>
               </a>
-              <p>Ut excepturi voluptatem nisi sed. Quidem fuga consequatur. Minus ea aut. Vel qui id voluptas adipisci eos earum corrupti.</p>
+              <p>24/7 IT Monitoring & Support – Continuous monitoring and expert assistance to prevent downtime.</p>
             </div>
           </div><!-- End Service Item -->
 
@@ -153,9 +153,9 @@
                 <i class="bi bi-bounding-box-circles"></i>
               </div>
               <a href="service-details.html" class="stretched-link">
-                <h3>Asperiores Commodit</h3>
+                <h3>Software Maintenance & Support </h3>
               </a>
-              <p>Non et temporibus minus omnis sed dolor esse consequatur. Cupiditate sed error ea fuga sit provident adipisci neque.</p>
+              <p> Continuous monitoring, updates, and technical assistance.</p>
               <a href="service-details.html" class="stretched-link"></a>
             </div>
           </div><!-- End Service Item -->
@@ -169,9 +169,9 @@
                 <i class="bi bi-calendar4-week icon"></i>
               </div>
               <a href="service-details.html" class="stretched-link">
-                <h3>Velit Doloremque</h3>
+                <h3>API Development & Integration</h3>
               </a>
-              <p>Cumque et suscipit saepe. Est maiores autem enim facilis ut aut ipsam corporis aut. Sed animi at autem alias eius labore.</p>
+              <p>Seamless integration of third-party services to enhance your software ecosystem.</p>
               <a href="service-details.html" class="stretched-link"></a>
             </div>
           </div><!-- End Service Item -->
@@ -185,9 +185,9 @@
                 <i class="bi bi-chat-square-text"></i>
               </div>
               <a href="service-details.html" class="stretched-link">
-                <h3>Dolori Architecto</h3>
+                <h3>Cloud Solutions</h3>
               </a>
-              <p>Hic molestias ea quibusdam eos. Fugiat enim doloremque aut neque non et debitis iure. Corrupti recusandae ducimus enim.</p>
+              <p>Scalable and secure cloud-based software for modern business needs.</p>
               <a href="service-details.html" class="stretched-link"></a>
             </div>
           </div><!-- End Service Item -->
@@ -204,7 +204,7 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Features</h2>
-        <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p>
+        <p>Our technology-driven approach ensures seamless integration and scalability for businesses of all sizes.</p>
       </div><!-- End Section Title -->
 
       <div class="container">
@@ -309,13 +309,13 @@
       <div class="row gy-4">
         <div class="col-lg-4 col-md-6 footer-about">
           <a href="index.html" class="logo d-flex align-items-center">
-            <span class="sitename">Company</span>
+            <span class="sitename">RG CodeCarfts Pvt.Ltd</span>
           </a>
           <div class="footer-contact pt-3">
-            <p>A108 Adam Street</p>
-            <p>New York, NY 535022</p>
-            <p class="mt-3"><strong>Phone:</strong> <span>+1 5589 55488 55</span></p>
-            <p><strong>Email:</strong> <span>info@example.com</span></p>
+            <p>Fortune 9,Raj Bhavan Rd</p>
+            <p>Hydrabad,Telangana 500082</p>
+            <p class="mt-3"><strong>Phone:</strong> <span>+91 7887920422</span></p>
+            <p><strong>Email:</strong> <span>rg@rgCodeCarfts.com</span></p>
           </div>
           <div class="social-links d-flex mt-4">
             <a href=""><i class="bi bi-twitter-x"></i></a>
@@ -362,7 +362,7 @@
     </div>
 
     <div class="container copyright text-center mt-4">
-      <p>© <span>Copyright</span> <strong class="px-1 sitename">Company</strong> <span>All Rights Reserved</span></p>
+      <p>© <span>Copyright</span> <strong class="px-1 sitename">RG CodeCarfts Pvt.Ltd</strong> <span>All Rights Reserved</span></p>
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
         <!-- You can delete the links only if you've purchased the pro version. -->
