--- a/team.html
+++ b/team.html
@@ -44,7 +44,7 @@
       <a href="index.html" class="logo d-flex align-items-center me-auto">
         <!-- Uncomment the line below if you also wish to use an image logo -->
         <!-- <img src="assets/img/logo.png" alt=""> -->
-        <h1 class="sitename">RG Technologies</h1><span>.</span>
+        <h1 class="sitename">RG CodeCarfts Pvt.Ltd</h1><span>.</span>
       </a>
 
       <nav id="navmenu" class="navmenu">
@@ -54,7 +54,7 @@
             <ul>
               <li><a href="team.html" class="active">Team</a></li>
               <li><a href="testimonials.html">Testimonials</a></li>
-              <li class="dropdown"><a href="#"><span>Deep Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
+              <li class="dropdown" style="display: none;"><a href="#"><span>Deep Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
                 <ul>
                   <li><a href="#">Deep Dropdown 1</a></li>
                   <li><a href="#">Deep Dropdown 2</a></li>
@@ -192,7 +192,7 @@
       <div class="row gy-4">
         <div class="col-lg-4 col-md-6 footer-about">
           <a href="index.html" class="logo d-flex align-items-center">
-            <span class="sitename">RG Technologies</span>
+            <span class="sitename">RG CodeCarfts Pvt.Ltd</span>
           </a>
           <div class="footer-contact pt-3">
             <p>Fortune 9,Raj Bhavan Rd</p>
@@ -245,7 +245,7 @@
     </div>
 
     <div class="container copyright text-center mt-4">
-      <p>© <span>Copyright</span> <strong class="px-1 sitename">RG Technologies</strong> <span>All Rights Reserved</span></p>
+      <p>© <span>Copyright</span> <strong class="px-1 sitename">RG CodeCarfts Pvt.Ltd</strong> <span>All Rights Reserved</span></p>
       <div class="credits">
 
         Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a> Distributed by <a href=“https://themewagon.com>ThemeWagon
