--- a/about.html
+++ b/about.html
@@ -27,7 +27,110 @@
   <!-- Main CSS File -->
   <link href="assets/css/main.css" rel="stylesheet">
 </head>
+<style type="text/css">
+/* HEADER */
+.header {
+    height: 50px; /* Reduced height for a compact look */
+    padding: 5px 10px; /* Less padding */
+    background: #fff;
+    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
 
+/* CONTAINER */
+.container {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+/* ROTATING CUBE AREA */
+.box-area {
+    position: relative;
+    width: 40px; /* Adjusted cube size */
+    height: 40px;
+    perspective: 400px; /* Adjusted for proper 3D effect */
+    margin-right: 5px; /* Proper spacing */
+}
+
+/* CUBE */
+.box {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    transform-style: preserve-3d;
+    animation: rotateBox 4s infinite linear;
+}
+
+/* CUBE FACES */
+.box-face {
+    position: absolute;
+    width: 40px; /* Matching box area */
+    height: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: #ffffff;
+    border: 1px solid #ddd;
+    box-shadow: 0 2px 3px rgba(0, 0, 0, 0.1);
+}
+
+/* IMAGE INSIDE THE CUBE */
+.box-face img {
+    width: 90%; /* Adjust image size within the box */
+    height: 90%;
+    object-fit: contain; /* Ensures the image is well-aligned and not stretched */
+}
+
+/* POSITIONING EACH FACE OF THE CUBE */
+#box-front  { transform: rotateY(  0deg) translateZ(20px); }
+#box-right  { transform: rotateY( 90deg) translateZ(20px); }
+#box-back   { transform: rotateY(180deg) translateZ(20px); }
+#box-left   { transform: rotateY(-90deg) translateZ(20px); }
+
+/* ROTATION ANIMATION */
+@keyframes rotateBox {
+    0%   { transform: rotateY(0deg); }
+    100% { transform: rotateY(360deg); }
+}
+
+/* COMPANY NAME */
+.sitename {
+    font-size: 14px; /* Slightly smaller for balance */
+    font-weight: bold;
+    color: #333;
+    margin-left: 5px;
+}
+
+/* NAVIGATION MENU */
+.navmenu ul {
+    list-style: none;
+    display: flex;
+    gap: 8px; /* Reduced gap */
+}
+
+.navmenu a {
+    text-decoration: none;
+    color: #333;
+    font-size: 12px; /* Smaller font */
+    font-weight: 600;
+}
+
+/* SOCIAL LINKS */
+.header-social-links {
+    display: flex;
+    gap: 6px;
+}
+
+.header-social-links a {
+    color: #333;
+    font-size: 12px; /* Reduced size */
+}
+
+
+</style>
 <body class="about-page">
 
   <header id="header" class="header d-flex align-items-center sticky-top">
@@ -36,7 +139,25 @@
       <a href="index.html" class="logo d-flex align-items-center me-auto">
         <!-- Uncomment the line below if you also wish to use an image logo -->
         <!-- <img src="assets/img/logo.png" alt=""> -->
-        <h1 class="sitename">RG Technologies</h1><span>.</span>
+        <div class="d-flex align-items-center">
+          <div class="box-area">
+              <div class="box">
+                  <div id="box-front" class="box-face">
+                      <img src="assets/img/logo1.png" alt="Suvarna HIS">
+                  </div>
+                  <div id="box-right" class="box-face">
+                      <img src="assets/img/logo1.png" alt="Suvarna LIS">
+                  </div>
+                  <div id="box-back" class="box-face">
+                      <img src="assets/img/logo1.png" alt="Suvarna DMS">
+                  </div>
+                  <div id="box-left" class="box-face">
+                      <img src="assets/img/logo1.png" alt="Suvarna RIS">
+                  </div>
+              </div>
+          </div> 
+      </div>
+      <h1 class="sitename">&nbsp;CodeCarfts Pvt.Ltd</h1><span></span>  
       </a>
 
       <nav id="navmenu" class="navmenu">
@@ -46,7 +167,7 @@
             <ul>
               <li><a href="team.html">Team</a></li>
               <li><a href="testimonials.html">Testimonials</a></li>
-              <li class="dropdown"><a href="#"><span>Deep Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
+              <li class="dropdown" style="display: none;"><a href="#"><span>Deep Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
                 <ul>
                   <li><a href="#">Deep Dropdown 1</a></li>
                   <li><a href="#">Deep Dropdown 2</a></li>
@@ -133,7 +254,7 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Our Team</h2>
-        <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p>
+        <p>Together, we are committed to pushing boundaries, embracing challenges, and delivering value to our clients.</p>
       </div><!-- End Section Title -->
 
       <div class="container">
@@ -152,7 +273,7 @@
                 </div>
               </div>
               <div class="member-info">
-                <h4>Walter White</h4>
+                <h4>Rahul G</h4>
                 <span>Chief Executive Officer</span>
               </div>
             </div>
@@ -170,7 +291,7 @@
                 </div>
               </div>
               <div class="member-info">
-                <h4>Sarah Jhonson</h4>
+                <h4>Trupati Jhonson</h4>
                 <span>Product Manager</span>
               </div>
             </div>
@@ -188,7 +309,7 @@
                 </div>
               </div>
               <div class="member-info">
-                <h4>William Anderson</h4>
+                <h4>Mehaboob</h4>
                 <span>CTO</span>
               </div>
             </div>
@@ -218,13 +339,12 @@
 
     </section><!-- /Team Section -->
 
-    <!-- Skills Section -->
     <section id="skills" class="skills section">
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Our Skills</h2>
-        <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p>
+        <p>We combine technical proficiency, creative thinking, and strategic problem-solving to deliver top-tier solutions</p>
       </div><!-- End Section Title -->
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
@@ -248,7 +368,7 @@
             </div><!-- End Skills Item -->
 
             <div class="progress">
-              <span class="skill"><span>JavaScript</span> <i class="val">75%</i></span>
+              <span class="skill"><span>JavaScript</span> <i class="val">100%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
@@ -259,21 +379,21 @@
           <div class="col-lg-6">
 
             <div class="progress">
-              <span class="skill"><span>PHP</span> <i class="val">80%</i></span>
+              <span class="skill"><span>C#</span> <i class="val">80%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div><!-- End Skills Item -->
 
             <div class="progress">
-              <span class="skill"><span>WordPress/CMS</span> <i class="val">90%</i></span>
+              <span class="skill"><span>.NET</span> <i class="val">90%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div><!-- End Skills Item -->
 
             <div class="progress">
-              <span class="skill"><span>Photoshop</span> <i class="val">55%</i></span>
+              <span class="skill"><span>Angular</span> <i class="val">80%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
@@ -293,7 +413,7 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Clients</h2>
-        <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p>
+        <p>Together, we are committed to pushing boundaries, embracing challenges, and delivering value to our clients</p>
       </div><!-- End Section Title -->
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
@@ -346,13 +466,13 @@
       <div class="row gy-4">
         <div class="col-lg-4 col-md-6 footer-about">
           <a href="index.html" class="logo d-flex align-items-center">
-            <span class="sitename">Company</span>
+            <span class="sitename">RG CodeCarfts Pvt.Ltd</span>
           </a>
           <div class="footer-contact pt-3">
-            <p>A108 Adam Street</p>
-            <p>New York, NY 535022</p>
-            <p class="mt-3"><strong>Phone:</strong> <span>+1 5589 55488 55</span></p>
-            <p><strong>Email:</strong> <span>info@example.com</span></p>
+            <p>Fortune 9,Raj Bhavan Rd</p>
+            <p>Hydrabad,Telangana 500082</p>
+            <p class="mt-3"><strong>Phone:</strong> <span>+91 7887920422</span></p>
+            <p><strong>Email:</strong> <span>rg@gmail.com</span></p>
           </div>
           <div class="social-links d-flex mt-4">
             <a href=""><i class="bi bi-twitter-x"></i></a>
@@ -399,7 +519,7 @@
     </div>
 
     <div class="container copyright text-center mt-4">
-      <p>© <span>Copyright</span> <strong class="px-1 sitename">Company</strong> <span>All Rights Reserved</span></p>
+      <p>© <span>Copyright</span> <strong class="px-1 sitename">RG CodeCarfts Pvt.Ltd</strong> <span>All Rights Reserved</span></p>
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
         <!-- You can delete the links only if you've purchased the pro version. -->
