--- a/portfolio.html
+++ b/portfolio.html
@@ -36,7 +36,7 @@
 
       <a href="index.html" class="logo d-flex align-items-center me-auto">
 
-        <h1 class="sitename">RG Technologies</h1><span>.</span>
+        <h1 class="sitename">RG CodeCarfts Pvt.Ltd</h1><span>.</span>
       </a>
 
       <nav id="navmenu" class="navmenu">
@@ -46,7 +46,7 @@
             <ul>
               <li><a href="team.html">Team</a></li>
               <li><a href="testimonials.html">Testimonials</a></li>
-              <li class="dropdown"><a href="#"><span>Deep Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
+              <li class="dropdown" style="display: none;"><a href="#"><span>Deep Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
                 <ul>
                   <li><a href="#">Deep Dropdown 1</a></li>
                   <li><a href="#">Deep Dropdown 2</a></li>
@@ -213,13 +213,13 @@
       <div class="row gy-4">
         <div class="col-lg-4 col-md-6 footer-about">
           <a href="index.html" class="logo d-flex align-items-center">
-            <span class="sitename">Company</span>
+            <span class="sitename">RG CodeCarfts Pvt.Ltd</span>
           </a>
           <div class="footer-contact pt-3">
-            <p>A108 Adam Street</p>
-            <p>New York, NY 535022</p>
-            <p class="mt-3"><strong>Phone:</strong> <span>+1 5589 55488 55</span></p>
-            <p><strong>Email:</strong> <span>info@example.com</span></p>
+            <p>Fortune 9,Raj Bhavan Rd</p>
+            <p>Hydrabad,Telangana 500082</p>
+            <p class="mt-3"><strong>Phone:</strong> <span>+91 7887920422</span></p>
+            <p><strong>Email:</strong> <span>rg@gmail.com</span></p>
           </div>
           <div class="social-links d-flex mt-4">
             <a href=""><i class="bi bi-twitter-x"></i></a>
