--- a/pricing.html
+++ b/pricing.html
@@ -38,7 +38,7 @@
       <a href="index.html" class="logo d-flex align-items-center me-auto">
         <!-- Uncomment the line below if you also wish to use an image logo -->
         <!-- <img src="assets/img/logo.png" alt=""> -->
-        <h1 class="sitename">RG Technologies</h1><span>.</span>
+        <h1 class="sitename">RG CodeCarfts Pvt.Ltd</h1><span>.</span>
       </a>
 
       <nav id="navmenu" class="navmenu">
@@ -48,7 +48,7 @@
             <ul>
               <li><a href="team.html">Team</a></li>
               <li><a href="testimonials.html">Testimonials</a></li>
-              <li class="dropdown"><a href="#"><span>Deep Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
+              <li class="dropdown" style="display: none;"><a href="#"><span>Deep Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
                 <ul>
                   <li><a href="#">Deep Dropdown 1</a></li>
                   <li><a href="#">Deep Dropdown 2</a></li>
@@ -103,18 +103,17 @@
           <div class="col-lg-4" data-aos="zoom-in" data-aos-delay="100">
             <div class="pricing-item">
               <h3>Free Plan</h3>
-              <p class="description">Ullam mollitia quasi nobis soluta in voluptatum et sint palora dex strater</p>
+              <p class="description">Our Free Plan is designed to help you explore the core features of RG Technologies at no cost.</p>
               <h4><sup>$</sup>0<span> / month</span></h4>
               <a href="#" class="cta-btn">Start a free trial</a>
               <p class="text-center small">No credit card required</p>
               <ul>
-                <li><i class="bi bi-check"></i> <span>Quam adipiscing vitae proin</span></li>
-                <li><i class="bi bi-check"></i> <span>Nec feugiat nisl pretium</span></li>
-                <li><i class="bi bi-check"></i> <span>Nulla at volutpat diam uteera</span></li>
-                <li class="na"><i class="bi bi-x"></i> <span>Pharetra massa massa ultricies</span></li>
-                <li class="na"><i class="bi bi-x"></i> <span>Massa ultricies mi quis hendrerit</span></li>
-                <li class="na"><i class="bi bi-x"></i> <span>Voluptate id voluptas qui sed aperiam rerum</span></li>
-                <li class="na"><i class="bi bi-x"></i> <span>Iure nihil dolores recusandae odit voluptatibus</span></li>
+                <li><i class="bi bi-check"></i> <span>Access to basic features</span></li>
+                <li><i class="bi bi-check"></i> <span>Limited usage of specific feature</span></li>
+                <li><i class="bi bi-check"></i> <span>Community support / Email support</span></li>
+                <li><i class="bi bi-check"></i> <span>Basic customer support/community support</span></li>
+                <li><i class="bi bi-check"></i> <span>Limited storage or data access, if applicable</span></li>
+         
               </ul>
             </div>
           </div><!-- End Pricing Item -->
@@ -123,18 +122,17 @@
             <div class="pricing-item featured">
               <p class="popular">Popular</p>
               <h3>Business Plan</h3>
-              <p class="description">Ullam mollitia quasi nobis soluta in voluptatum et sint palora dex strater</p>
+              <p class="description">Our Business Plan is designed for growing teams and businesses that need more advanced features, scalability, and premium support. </p>
               <h4><sup>$</sup>29<span> / month</span></h4>
               <a href="#" class="cta-btn">Start a free trial</a>
               <p class="text-center small">No credit card required</p>
               <ul>
-                <li><i class="bi bi-check"></i> <span>Quam adipiscing vitae proin</span></li>
-                <li><i class="bi bi-check"></i> <span>Nec feugiat nisl pretium</span></li>
-                <li><i class="bi bi-check"></i> <span>Nulla at volutpat diam uteera</span></li>
-                <li><i class="bi bi-check"></i> <span>Pharetra massa massa ultricies</span></li>
-                <li><i class="bi bi-check"></i> <span>Massa ultricies mi quis hendrerit</span></li>
-                <li><i class="bi bi-check"></i> <span>Voluptate id voluptas qui sed aperiam rerum</span></li>
-                <li class="na"><i class="bi bi-x"></i> <span>Iure nihil dolores recusandae odit voluptatibus</span></li>
+                <li><i class="bi bi-check"></i> <span>Full access to all core features</span></li>
+                <li><i class="bi bi-check"></i> <span> Priority customer support</span></li>
+                <li><i class="bi bi-check"></i> <span> Advanced analytics & reporting</span></li>
+                <li><i class="bi bi-check"></i> <span>Team collaboration tools</span></li>
+                <li><i class="bi bi-check"></i> <span>Integration with third-party apps</span></li>
+                <li><i class="bi bi-check"></i> <span>Increased storage or bandwidth, if applicable</span></li>
               </ul>
             </div>
           </div><!-- End Pricing Item -->
@@ -142,18 +140,17 @@
           <div class="col-lg-4" data-aos="zoom-in" data-aos-delay="300">
             <div class="pricing-item">
               <h3>Developer Plan</h3>
-              <p class="description">Ullam mollitia quasi nobis soluta in voluptatum et sint palora dex strater</p>
+              <p class="description">The Developer Plan is tailored for developers, engineers, and tech teams who need access to advanced tools, APIs, and integrations</p>
               <h4><sup>$</sup>49<span> / month</span></h4>
               <a href="#" class="cta-btn">Start a free trial</a>
               <p class="text-center small">No credit card required</p>
               <ul>
-                <li><i class="bi bi-check"></i> <span>Quam adipiscing vitae proin</span></li>
-                <li><i class="bi bi-check"></i> <span>Nec feugiat nisl pretium</span></li>
-                <li><i class="bi bi-check"></i> <span>Nulla at volutpat diam uteera</span></li>
-                <li><i class="bi bi-check"></i> <span>Pharetra massa massa ultricies</span></li>
-                <li><i class="bi bi-check"></i> <span>Massa ultricies mi quis hendrerit</span></li>
-                <li><i class="bi bi-check"></i> <span>Voluptate id voluptas qui sed aperiam rerum</span></li>
-                <li><i class="bi bi-check"></i> <span>Iure nihil dolores recusandae odit voluptatibus</span></li>
+                <li><i class="bi bi-check"></i> <span>Full API access & documentation</span></li>
+                <li><i class="bi bi-check"></i> <span> Higher API rate limits</span></li>
+                <li><i class="bi bi-check"></i> <span> Webhooks & custom integrations</span></li>
+                <li><i class="bi bi-check"></i> <span>Sandbox environment for testing</span></li>
+                <li><i class="bi bi-check"></i> <span>Priority developer support</span></li>
+                <li><i class="bi bi-check"></i> <span>Early access to beta features</span></li>
               </ul>
             </div>
           </div><!-- End Pricing Item -->
@@ -172,13 +169,13 @@
       <div class="row gy-4">
         <div class="col-lg-4 col-md-6 footer-about">
           <a href="index.html" class="logo d-flex align-items-center">
-            <span class="sitename">Company</span>
+            <span class="sitename">RG CodeCarfts Pvt.Ltd</span>
           </a>
           <div class="footer-contact pt-3">
-            <p>A108 Adam Street</p>
-            <p>New York, NY 535022</p>
-            <p class="mt-3"><strong>Phone:</strong> <span>+1 5589 55488 55</span></p>
-            <p><strong>Email:</strong> <span>info@example.com</span></p>
+            <p>Fortune 9,Raj Bhavan Rd</p>
+            <p>Hydrabad,Telangana 500082</p>
+            <p class="mt-3"><strong>Phone:</strong> <span>+91 7887920422</span></p>
+            <p><strong>Email:</strong> <span>rg@gmail.com</span></p>
           </div>
           <div class="social-links d-flex mt-4">
             <a href=""><i class="bi bi-twitter-x"></i></a>
@@ -225,12 +222,8 @@
     </div>
 
     <div class="container copyright text-center mt-4">
-      <p>© <span>Copyright</span> <strong class="px-1 sitename">Company</strong> <span>All Rights Reserved</span></p>
+      <p>© <span>Copyright</span> <strong class="px-1 sitename">RG CodeCarfts Pvt.Ltd</strong> <span>All Rights Reserved</span></p>
       <div class="credits">
-        <!-- All the links in the footer should remain intact. -->
-        <!-- You can delete the links only if you've purchased the pro version. -->
-        <!-- Licensing information: https://bootstrapmade.com/license/ -->
-        <!-- Purchase the pro version with working PHP/AJAX contact form: [buy-url] -->
         Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a> Distributed by <a href=“https://themewagon.com>ThemeWagon
       </div>
     </div>
