--- a/index.html
+++ b/index.html
@@ -213,9 +213,8 @@
         <div class="carousel-item active">
           <img src="assets/img/hero-carousel/hero-carousel-1.jpg" alt="">
           <div class="container">
-            <h2>We are professional</h2>
-            <p>we specialize in building innovative software solutions tailored to your business needs. Whether you're looking for cutting-edge web development, mobile app design, or custom software, we bring your ideas to life with creativity and precision.
-              Our team of experienced developers, designers, and strategists is dedicated to helping you succeed in today’s digital world. From startups to enterprises, we deliver scalable, efficient, and user-friendly solutions that make an impact.</p>
+            <h3>We are professional</h3>
+            <p>We specialize in building innovative software solutions tailored to your business needs.</p>
             <a href="about.html" class="btn-get-started">Read More</a>
           </div>
         </div><!-- End Carousel Item -->
