--- a/contact.html
+++ b/contact.html
@@ -171,7 +171,7 @@
                   </div>
               </div> 
           </div>
-        <h1 class="sitename">&nbsp;CodeCarfts Pvt.Ltd</h1><span>.</span>
+        <h1 class="sitename">&nbsp;&nbsp;CodeCarfts Pvt.Ltd</h1><span>.</span>
       </a>
 
       <nav id="navmenu" class="navmenu">
